[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/OBJECTS/sprites/door-yellow.png" type="Texture" id=1]
[ext_resource path="res://assets/OBJECTS/sprites/dungeon-door-opened.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Door.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="Animation" id=6]
resource_name = "Close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Open",
"speed": 5.0
} ]

[node name="Door" type="StaticBody2D"]
collision_mask = 2
script = ExtResource( 3 )

[node name="BlockingCollisionNode" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="DetectionCollisionNode" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Close" type="Sprite" parent="."]
visible = false
position = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="Open" type="Sprite" parent="."]
visible = false
position = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
anims/Close = SubResource( 6 )
anims/Open = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, 8 )
frames = SubResource( 4 )
animation = "Open"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
